WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39744
[Qt] qt_instance.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39744
Summary
[Qt] qt_instance.cpp has coding-style errors
Anders Bakken
Reported
2010-05-26 09:31:28 PDT
WebCore/bridge/qt/qt_instance.h:20: #ifndef header guard has wrong style, please use: qt_instance_h [build/header_guard] [5] Total errors found: 1 in 1 files dfb-47 [flow:~/dev/WebKit/WebCore/bridge/qt] ../../../WebKitTools/Scripts/check-webkit-style qt_instance.cpp WebCore/bridge/qt/qt_instance.cpp:29: Alphabetical sorting problem. [build/include_order] [4] WebCore/bridge/qt/qt_instance.cpp:31: Alphabetical sorting problem. [build/include_order] [4] WebCore/bridge/qt/qt_instance.cpp:32: Alphabetical sorting problem. [build/include_order] [4] WebCore/bridge/qt/qt_instance.cpp:35: Alphabetical sorting problem. [build/include_order] [4] WebCore/bridge/qt/qt_instance.cpp:37: Alphabetical sorting problem. [build/include_order] [4] WebCore/bridge/qt/qt_instance.cpp:122: Missing space before ( in foreach( [whitespace/parens] [5] WebCore/bridge/qt/qt_instance.cpp:155: Missing space before ( in for( [whitespace/parens] [5] WebCore/bridge/qt/qt_instance.cpp:192: Missing space before ( in foreach( [whitespace/parens] [5] WebCore/bridge/qt/qt_instance.cpp:219: Missing spaces around = [whitespace/operators] [4] WebCore/bridge/qt/qt_instance.cpp:223: One line control clauses should not use braces. [whitespace/braces] [4] WebCore/bridge/qt/qt_instance.cpp:228: Missing space before ( in foreach( [whitespace/parens] [5] WebCore/bridge/qt/qt_instance.cpp:230: One line control clauses should not use braces. [whitespace/braces] [4] WebCore/bridge/qt/qt_instance.cpp:238: One line control clauses should not use braces. [whitespace/braces] [4] WebCore/bridge/qt/qt_instance.cpp:284: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] WebCore/bridge/qt/qt_instance.cpp:335: An else if statement should be written as an if statement when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] WebCore/bridge/qt/qt_instance.cpp:351: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] Total errors found: 16 in 1 files
Attachments
Patch that fixes the coding style issues
(5.58 KB, patch)
2010-05-26 09:52 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-05-26 09:52:09 PDT
Created
attachment 57106
[details]
Patch that fixes the coding style issues
Petri Ojala
Comment 2
2010-05-26 21:38:54 PDT
QtTriaged
WebKit Commit Bot
Comment 3
2010-05-27 13:26:18 PDT
Comment on
attachment 57106
[details]
Patch that fixes the coding style issues Clearing flags on attachment: 57106 Committed
r60322
: <
http://trac.webkit.org/changeset/60322
>
WebKit Commit Bot
Comment 4
2010-05-27 13:26:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug